--- a/src/styles/common/SearchBar.module.css
+++ b/src/styles/common/SearchBar.module.css
@@ -16,14 +16,16 @@
     outline: none;
 }
 
+.form input::placeholder {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    padding-left: 5px;
+}
+
 .form button {
     height: 40px;
     width: 40px;
     background: none;
     border: none;
     cursor: pointer;
-}
-
-@media (max-width:600px) {
-    
 }
