--- a/src/styles/public/FiltersTable.module.css
+++ b/src/styles/public/FiltersTable.module.css
@@ -1,9 +1,132 @@
 .aside {
+    padding: 0 13px 0 13px;
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 3;
-    background-color: bisque;
+    background-color: #fff;
     margin: 20px 0 0 0;
-    height: 600px
+    height: 600px;
+    border-radius: 0.7em;
+}
+
+.productsDetailsContainer {
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    background: none;
+    border-bottom: 1px solid #c2c1c1;
+}
+
+.categorie {
+    padding-top: 5px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: 1px;
+}
+
+.brand {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 17px;
+    color: #31363F;
+}
+
+.productsDetailsContainer p {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+    color: #31363F;
+}
+
+.filtersAppliedContainer {
+    height: 85px;
+    padding-top: 15px;
+    background: none;
+    border-bottom: 1px solid #c2c1c1;
+    margin-bottom: 16px;
+}
+
+.filtersAppliedContainer div:nth-child(1) {
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.filtersAppliedContainer div:nth-child(1) span {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.filtersAppliedContainer div:nth-child(1) button {
+    height: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    background: none;
+    border: none;
+    text-decoration: underline;
+    color: hsl(205, 100%, 36%);
+    cursor: pointer;
+    transition: all .5s;
+}
+
+.filtersAppliedContainer div:nth-child(1) button:hover {
+    text-decoration: none;
+}
+
+.removeFilterBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+    width: 28%;
+    border: 1px solid;
+    border-radius: 1em;
+    background: none;
+}
+
+.removeFilterBtn span {
+    margin-right: 7px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 17px;
+}
+
+.removeFilterBtn button {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 17px;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.filterContainer {
+    height: 150px;
+    background: none;
+}
+
+.filter {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 17px;
+    font-weight: 500;
+    letter-spacing: 1px;
+}
+
+.filterBox ul {
+    padding: 0;
+    border-bottom: 1px solid #c2c1c1;
+}
+
+.filterBox li {
+    list-style-type: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 10px;
+}
+
+.filterBox li input[type="checkbox"] {
+    background-color: #fff;
+    width: 1.3em;
+    height: 1.3em;
+    border: 1px solid #31363F;
+    border-radius: 0.15em;
+    transform: translateY(0.23em);
 }
