--- a/src/styles/public/OrderByBtn.module.css
+++ b/src/styles/public/OrderByBtn.module.css
@@ -7,7 +7,7 @@
     justify-content: right;
     align-items: center;
     height: 30px;
-    margin: 20px 0 0 0;
+    margin: 20px 50px 0 0;
 }
 
 .form label {
