--- a/src/styles/public/Products.module.css
+++ b/src/styles/public/Products.module.css
@@ -1,6 +1,18 @@
 .main {
     display: grid;
-    grid-template-columns: 30px 400px auto 30px;
+    grid-template-columns: 70px 320px auto 30px;
     grid-template-rows: 50px auto;
     gap: 15px;
+}
+
+.section {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    display: grid;
+    grid-template-columns: 280px 280px 280px;
+    gap: 45px;
+    height: 100%;
+    width: 100%;
 }
