--- a/src/styles/common/Navbar.module.css
+++ b/src/styles/common/Navbar.module.css
@@ -18,9 +18,6 @@
     transition: all .5s;
 }
 
-@media (max-width:600px) {
-
-    .nav {
-        height: 4em;
-    }
+.link {
+    text-decoration: none;
 }
