--- a/src/styles/public/LoginForm.module.css
+++ b/src/styles/public/LoginForm.module.css
@@ -10,7 +10,7 @@
     width: 40%;
     text-align: center;
     border-radius: 1.5em;
-    background-color: #D1D8C5;
+    background-color: #fff;
 }
 
 .container h2 {
@@ -45,7 +45,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
     color: #31363F;
-    border: none;
+    border: 1px solid #69758b;
     outline: none;
 }
 
