--- a/src/styles/public/RegisterForm.module.css
+++ b/src/styles/public/RegisterForm.module.css
@@ -6,11 +6,11 @@
 }
 
 .container {
-    height: 89%;
+    height: 90%;
     width: 40%;
     text-align: center;
     border-radius: 1.5em;
-    background-color: #D1D8C5;
+    background-color: #fff;
 }
 
 .container h2 {
@@ -45,7 +45,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
     color: #31363F;
-    border: none;
+    border: 1px solid #69758b;
     outline: none;
 }
 
@@ -82,8 +82,8 @@
     padding-top: 2px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 14px;
-    background-color: #eee;
-    border-radius: 0.2em;
+    background-color: #eaeaea;
+    border-radius: 0.4em;
 }
 
 .link {
