--- a/src/styles/public/ProductLayout.module.css
+++ b/src/styles/public/ProductLayout.module.css
@@ -11,3 +11,84 @@
     grid-row-start: 3;
     grid-row-end: 4;
 }
+
+.modalOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 1, 1, 0.5);
+    display: grid;
+    place-items: center;
+    transition: all .5s;
+    visibility: visible;
+    z-index: 10;
+}
+
+.modalContainer {
+    background: #fff;
+    border-radius: 0.8em;
+    width: 40vw;
+    height: 40vh;
+    max-width: 1170px;
+    text-align: center;
+    display: grid;
+    place-items: center;
+    position: fixed;
+    /* z-index: 10; */
+}
+
+.closeBtnContainer {
+    width: 95%;
+    height: 30px;
+    display: flex;
+    justify-content: right;
+}
+
+.closeBtnContainer button {
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.modalContainer span {
+    font-family: system-ui;
+    font-size: 25px;
+}
+
+.btnsContainer {
+    height: 35px;
+    width: 480px;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    gap: 25px;
+}
+
+.keepBuyingBtnContainer button {
+    height: 30px;
+    font-family: system-ui;
+    font-size: 15px;
+    background: none;
+    border: none;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.goToCartBtnContainer button {
+    height: 35px;
+    width: 110px;
+    font-family: system-ui;
+    font-size: 20px;
+    background-color: #615EFC;
+    color: #fff;
+    border-radius: 1em;
+    border: none;
+    cursor: pointer;
+}
+
+.link {
+    text-decoration: none;
+}
