--- a/src/styles/common/Modal.module.css
+++ b/src/styles/common/Modal.module.css
@@ -1,25 +1,3 @@
-.main {
-    display: grid;
-    grid-template-columns: 80px auto auto 50px;
-    grid-template-rows: 20px 60px auto 50px;
-    gap: 15px;
-}
-
-.productDetailsContainer {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 3;
-    grid-row-end: 4;
-}
-
-.paymentcontainer {
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 4;
-}
-
-
 .modalOverlay {
     position: fixed;
     top: 0;
@@ -75,7 +53,7 @@
     gap: 25px;
 }
 
-.tryAgainBtnContainer button {
+.keepBuyingBtnContainer button {
     height: 30px;
     font-family: system-ui;
     font-size: 15px;
@@ -85,12 +63,18 @@
     cursor: pointer;
 }
 
-.keepBuyingBtnContainer button {
-    height: 30px;
+.goToCartBtnContainer button {
+    height: 35px;
+    width: 110px;
     font-family: system-ui;
-    font-size: 15px;
-    background: none;
+    font-size: 20px;
+    background-color: #615EFC;
+    color: #fff;
+    border-radius: 1em;
     border: none;
-    text-decoration: underline;
     cursor: pointer;
+}
+
+.link {
+    text-decoration: none;
 }
