--- a/src/styles/public/Product.module.css
+++ b/src/styles/public/Product.module.css
@@ -34,6 +34,7 @@
     font-size: 22px;
 }
 
-.link {
+.link, .link:hover, .link:active, .link:focus {
     text-decoration: none;
+    color: inherit;
 }
