--- a/src/styles/private/Order.module.css
+++ b/src/styles/private/Order.module.css
@@ -1,11 +1,8 @@
 .section {
     padding: 20px 30px 20px 30px;
+    margin-bottom: 40px;
     display: flex;
     flex-direction: column;
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 4;
-    grid-row-end: 5;
     border-radius: 0.7em;
     background-color: #fff;
 }
