--- a/src/styles/private/OrderDate.module.css
+++ b/src/styles/private/OrderDate.module.css
@@ -1,13 +1,4 @@
-.section {
-    display: flex;
-    align-items: end;
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 2;
-    grid-row-end: 3;
-}
-
-.section span {
+.span {
     font-family: system-ui;
     font-size: 16px;
 }
