--- a/src/styles/private/OrderNumber.module.css
+++ b/src/styles/private/OrderNumber.module.css
@@ -1,14 +1,4 @@
-.section {
-    display: flex;
-    align-items: end;
-    justify-content: right;
-    grid-column-start: 4;
-    grid-column-end: 5;
-    grid-row-start: 2;
-    grid-row-end: 3;
-}
-
-.section span {
+.span {
     font-family: system-ui;
     font-size: 16px;
 }
