--- a/src/styles/common/Navbar.module.css
+++ b/src/styles/common/Navbar.module.css
@@ -21,3 +21,13 @@
 .link {
     text-decoration: none;
 }
+
+.link button {
+    font-family: system-ui;
+    font-size: 20px;
+    font-weight: 500;
+    color: #fff;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
