--- a/src/styles/common/SearchBar.module.css
+++ b/src/styles/common/SearchBar.module.css
@@ -5,27 +5,40 @@
     width: 610px;
 }
 
+.form {
+    width: 100%;
+    height: 80%;
+    background-color: #fff;
+    border-radius: 2em;
+}
+
 .form input {
-    height: 30px;
-    width: 550px;
+    height: 91%;
+    width: 87%;
     border-radius: 2em;
     border: none;
-    padding-left: 10px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 22px;
+    padding-left: 15px;
+    font-family: system-ui;
+    font-size: 20px;
     outline: none;
+    color: #4f4f4f;
 }
 
 .form input::placeholder {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui;
     font-size: 20px;
     padding-left: 5px;
 }
 
 .form button {
-    height: 40px;
-    width: 40px;
+    height: 92%;
+    width: 9%;
     background: none;
     border: none;
     cursor: pointer;
+}
+
+.form i {
+    font-size: 25px;
+    color: #cccccc;
 }
