--- a/src/styles/public/FiltersTable.module.css
+++ b/src/styles/public/FiltersTable.module.css
@@ -6,7 +6,7 @@
     grid-row-end: 3;
     background-color: #fff;
     margin: 20px 0 0 0;
-    height: 600px;
+    height: 1200px;
     border-radius: 0.7em;
 }
 
@@ -18,22 +18,22 @@
     border-bottom: 1px solid #c2c1c1;
 }
 
-.categorie {
+.category {
     padding-top: 5px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui;
     font-size: 20px;
     font-weight: 400;
     letter-spacing: 1px;
 }
 
 .brand {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui;
     font-size: 17px;
     color: #31363F;
 }
 
 .productsDetailsContainer p {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui;
     font-size: 16px;
     color: #31363F;
 }
@@ -53,14 +53,14 @@
 }
 
 .filtersAppliedContainer div:nth-child(1) span {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui;
     font-size: 16px;
     font-weight: 500;
 }
 
 .filtersAppliedContainer div:nth-child(1) button {
     height: 20px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui;
     font-size: 14px;
     background: none;
     border: none;
@@ -87,12 +87,12 @@
 
 .removeFilterBtn span {
     margin-right: 7px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui;
     font-size: 17px;
 }
 
 .removeFilterBtn button {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui;
     font-size: 17px;
     background: none;
     border: none;
@@ -105,7 +105,7 @@
 }
 
 .filter {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui;
     font-size: 17px;
     font-weight: 500;
     letter-spacing: 1px;
@@ -118,7 +118,8 @@
 
 .filterBox li {
     list-style-type: none;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui;
+    text-transform: capitalize;
     margin-bottom: 10px;
 }
 
@@ -129,4 +130,25 @@
     border: 1px solid #31363F;
     border-radius: 0.15em;
     transform: translateY(0.23em);
+    cursor: pointer;
+}
+
+.applyFiltersContainer {
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+.applyFiltersContainer button {
+    height: 55px;
+    width: 200px;
+    font-family: system-ui;
+    font-size: 23px;
+    font-weight: 300;
+    border-radius: 0.8em;
+    border: none;
+    color: #fff;
+    background-color: #615EFC;
+    cursor: pointer;
 }
