--- a/src/styles/private/PaymentDetails.module.css
+++ b/src/styles/private/PaymentDetails.module.css
@@ -73,3 +73,98 @@
     font-size: 22px;
     color: #2f2f2f;
 }
+
+.modalOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 1, 1, 0.5);
+    display: grid;
+    place-items: center;
+    transition: all .5s;
+    visibility: visible;
+    z-index: 10;
+}
+
+.modalContainer {
+    background: #fff;
+    border-radius: 0.8em;
+    width: 40vw;
+    height: 40vh;
+    max-width: 1170px;
+    text-align: center;
+    display: grid;
+    place-items: center;
+    position: fixed;
+    /* z-index: 10; */
+}
+
+.closeBtnContainer {
+    width: 95%;
+    height: 30px;
+    display: flex;
+    justify-content: right;
+}
+
+.closeBtnContainer button {
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.modalContainer span {
+    font-family: system-ui;
+    font-size: 25px;
+}
+
+.btnsContainer {
+    height: 35px;
+    width: 480px;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    gap: 25px;
+}
+
+.tryAgainBtnContainer button {
+    height: 30px;
+    font-family: system-ui;
+    font-size: 15px;
+    background: none;
+    border: none;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.keepBuyingBtnContainer button {
+    height: 30px;
+    font-family: system-ui;
+    font-size: 15px;
+    background: none;
+    border: none;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.loadingContentContainer {
+    height: 500px;
+    width: 800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    border-radius: 0.8em;
+    background-color: #fff;
+}
+
+.loadingContentContainer div {
+    font-family: system-ui;
+    font-size: 50px;
+    font-weight: 300;
+}
